# kernelsnoop

./: .air.toml  .gitignore  .pre-commit-config.yaml  Makefile  README.md  config.toml  go.mod  go.sum  main.go  main.py  pyproject.toml
cmd/: gen.go  start.go
docker/: Dockerfile  compose.yml  compose.yml.old  fluent-bit.conf  loki-config.yaml  promtail-config.yaml
docker/dashboards/: dashboard.json
docs/: learning.md
internal/alerts/: dbus_notify.go
internal/config/: reader.go
internal/core/: README.md  _old_core.go  core.go
internal/dto/: config.go  context_data.go
internal/ebpf/: ipv4_filter.c
internal/ebpftools/: bpf_bpfel.go  bpf_sockops.h  hello_world.bpf.c  hello_world.go  hello_world_bpf_bpfeb.go  hello_world_bpf_bpfel.go  tcprtt_sockops.c  tcprtt_sockops.go
internal/ebpftools/ksnoop_permissions/: test.bpf.c  test.go  test_bpf_bpfeb.go  test_bpf_bpfel.go
internal/ebpftools/ksnoop_syscalls/: bpf_bpfeb.go  bpf_bpfel.go  syscall_hello.bpf.c  syscall_hello.bpf.go
internal/ipchecker/: ip_checker.go
internal/ksnoop/: gen.go  network_monitor.bpf.c  perm_monitor.go  process_monitor.bpf.c  process_monitor.go  process_monitor_bpf_bpfeb.go  process_monitor_bpf_bpfel.go  shell_readline.bpf.c  shell_readline.go
internal/ksnoop/_file_watchdog/: file_manager.bpf.c  file_manager.go
internal/ksnoop/_generates/: filemanager_x86_bpfel.go  gen.go  tcpconnect_x86_bpfel.go
internal/ksnoop/_shell_readline/: shell_readline.go
internal/ksnoop/core/: core.go
internal/ksnoop/file_caps/: bpf_bpfeb.go  bpf_bpfel.go  file_caps.bpf.c  file_caps.go
internal/ksnoop/file_permissions/: bpf_bpfeb.go  bpf_bpfel.go  file_permissions.bpf.c  file_permissions.go
internal/ksnoop/generates/: filegone_monitor_bpf_x86_bpfel.go  gen.go  network_monitor_bpf_x86_bpfel.go  permission_monitor_bpf_x86_bpfel.go  process_monitor_bpf_x86_bpfel.go  shellreadline_x86_bpfel.go
internal/ksnoop/tcp_connect/: bpf_bpfeb.go  bpf_bpfel.go  tcp_connect.bpf.c  tcp_connect.go
internal/ksnoop/utils/: utils.go
internal/monitoring/: prometheus.go
internal/programs/net_track/: README.md  bpf_bpfeb.go  bpf_bpfel.go  net_track.bpf.c  net_track.go  tcp_connect.bpf.c  tcp_connect.go
internal/trackers/net_track/: bpf_bpfeb.go  bpf_bpfel.go  net_track.go
internal/utils/: ger_logger.go  utils.go
learningStuff/: README.md  _old_core.go  kprobe_args.bpf.c
src/kernelsniffer/: __main__.py  constants.py  external_ip.py
src/kernelsniffer/app/: config.py  constants.py  external_ip.py
src/kernelsniffer/cli/: cli.py  start.py
src/kernelsnoop/: __main__.py  args.py  config.py  constants.py  external_ip.py  logger.py  sys_notify.py
stuff/: README.md
systemd/: kernelsnoop.service
(+13 files in other folders)
