[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "kernelsnoop"
version = "0.1.0"
description = ''
authors = ["containerscrew <info@containerscrew.com>"]
repository = "https://github.com/containerscrew/kernelsnoop"
documentation = "https://github.com/containerscrew/kernelsnoop#readme"
keywords = ["python","cli", "typer", "ebpf", "security"]
license = "XXXXX"
readme = "README.md"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]

include = [
    { path = "tests", format = "sdist" },
    { path = "CHANGELOG.md" }
]

[tool.poetry.scripts]
kernelsnoop = 'kernelsnoop.__main__:main'

[tool.poetry.dependencies]
python = "^3.12"
notify2 = "^0.3.1"
dbus-python = "^1.3.2"
requests = "^2.32.3"
schedule = "^1.2.2"
dacite = "^1.8.1"
python-daemon = "^3.0.1"
argparse = "^1.4.0"
